Added 10px grid-gap to Grid CSS layout

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body {
 .container {
 	display: grid;
 	grid-auto-flow: column;
-	grid-row-gap: 10px;
+	grid-gap: 10px;
 	grid-template-columns: repeat(12, [col] 1fr);
 	grid-template-rows: 56px auto;
 	grid-template-areas:
@@ -124,7 +124,7 @@ body {
 
 .grid-overlay {
 	display: grid;
-	grid-row-gap: 10px;
+	grid-gap: 10px;
 	grid-template-columns: repeat(12, [col] 1fr);
 	grid-template-rows: auto;
 	height: 100%;
